--- a/index.html
+++ b/index.html
@@ -6,14 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/quizApp.css">
     <script src="assets/js/quizApp.js" defer></script>
     <title>Quiz App</title>
 </head>
 <body>
     <div class="container">
-        
+        <div class="container-leftside">
+            <h1><span>Frontend Quiz'e</span>Hoşgeldiniz!</h1>
+            <span>Başlamak için bir konu seçiniz.</span>
+        </div>
+        <div class="container-rightside">
+
+        </div>
     </div>
 </body>
 </html>
