Konu başlıklarının yer aldığı sağ bölüm tamamlandı. Dark tema ve js işlemleri yapılacak...

--- a/index.html
+++ b/index.html
@@ -18,7 +18,36 @@
             <span>Başlamak için bir konu seçiniz.</span>
         </div>
         <div class="container-rightside">
-
+            <ul class="subject-list">
+                <li class="subject-element">
+                    <a href="#" class="subject-link" id="html">
+                        <img src="assets/img/html.svg" alt="">
+                        <span>HTML</span>
+                    </a>
+                </li>
+                <li class="subject-element">
+                    <a href="#" class="subject-link" id="css">
+                        <img src="assets/img/css.svg" alt="">
+                        <span>
+                            CSS
+                        </span>
+                    </a>
+                </li>
+                <li class="subject-element">
+                    <a href="#" class="subject-link" id="js">
+                        <img src="assets/img/js.svg" alt="">
+                        <span>
+                            Javascript
+                        </span>
+                    </a>
+                </li>
+                <li class="subject-element">
+                    <a href="#" class="subject-link" id="accessibility">
+                        <img src="assets/img/accessibility.svg" alt="">
+                        <span>Erişilebilirlik</span>
+                    </a>
+                </li>
+            </ul>
         </div>
     </div>
 </body>
