--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <title>Quiz App</title>
 </head>
 <body>
+    <div class="toggle-container">
+        <img src="assets/img/sun.svg" alt="">
+        <label class="toggle" for="dark-mode">
+            <input class="toggle-input" type="checkbox" id="dark-mode">
+            <div class="toggle-fill">
+            </div>
+        </label>
+        <img src="assets/img/moon.svg" alt="">
+    </div>
     <div class="container">
         <div class="container-leftside">
             <h1><span>Frontend Quiz'e</span>Hoşgeldiniz!</h1>
