Kodlamaları kısaltmak için aynı özelliklere sahip elemanlar için tek bir class oluşturup. Elemanların bu class ların css özelliklerine sahip olması işlemi yapılacak.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
         <div class="container-leftside">
             <h1><span>Frontend Quiz'e</span>Hoşgeldiniz!</h1>
-            <span>Başlamak için bir konu seçiniz.</span>
+            <span class="small-text">Başlamak için bir konu seçiniz.</span>
         </div>
         <div class="container-rightside">
             <ul class="subject-list">
