Json'dan alınan data ekrana başarılı bir şekilde bastırıldı.

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         <div class="container-rightside">
             <ul class="subject-list">
                 <li class="subject-element">
-                    <a href="#" class="subject-link" id="html">
+                    <a href="#" class="subject-link router" id="html">
                         <img src="assets/img/html.svg" alt="">
                         <span>HTML</span>
                     </a>
                 </li>
                 <li class="subject-element">
-                    <a href="#" class="subject-link" id="css">
+                    <a href="#" class="subject-link router" id="css">
                         <img src="assets/img/css.svg" alt="">
                         <span>
                             CSS
@@ -47,7 +47,7 @@
                     </a>
                 </li>
                 <li class="subject-element">
-                    <a href="#" class="subject-link" id="js">
+                    <a href="#" class="subject-link router" id="js">
                         <img src="assets/img/js.svg" alt="">
                         <span>
                             Javascript
@@ -55,7 +55,7 @@
                     </a>
                 </li>
                 <li class="subject-element">
-                    <a href="#" class="subject-link" id="accessibility">
+                    <a href="#" class="subject-link router" id="accessibility">
                         <img src="assets/img/accessibility.svg" alt="">
                         <span>Erişilebilirlik</span>
                     </a>
