Dark mode stillendirmesi tamamlandı.

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <script src="assets/js/quizApp.js" defer></script>
     <title>Quiz App</title>
 </head>
-<body>
+<body class="dark-mode">
     <div class="top-bar-container">
         <div class="subject-heading"></div>
         <div class="toggle-container">
-            <img src="assets/img/sun.svg" alt="">
+            <img class="toggle-img" src="assets/img/sun.svg" alt="">
             <label class="toggle" for="dark-mode">
                 <input class="toggle-input" type="checkbox" id="dark-mode">
                 <div class="toggle-fill">
                 </div>
             </label>
-            <img src="assets/img/moon.svg" alt="">
+            <img class="toggle-img" src="assets/img/moon.svg" alt="">
         </div>
     </div>
 
