Dark mod , sorular execute olduğunda çalışmıyordu. Bunun için bir düzenleme yapıldı.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="top-bar-container">
-        <div class="subject-heading"></div>
+        <div class="remove-this-element"></div>
         <div class="toggle-container">
             <img class="toggle-img" id="sun" src="assets/img/sun.svg" alt="">
             <label class="toggle" for="dark-mode">
@@ -64,5 +64,6 @@
             </ul>
         </div>
     </div>
+
 </body>
 </html>
