--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="top-bar-container">
-        <div class="remove-this-element"></div>
+        <div class="subject-heading"></div>
         <div class="toggle-container">
             <img class="toggle-img" id="sun" src="assets/img/sun.svg" alt="">
             <label class="toggle" for="dark-mode">
@@ -25,7 +25,6 @@
             <img class="toggle-img" id="moon" src="assets/img/moon.svg" alt="">
         </div>
     </div>
-
     <div class="container">
         <div class="container-leftside">
             <h1><span>Frontend Quiz'e</span>Hoşgeldiniz!</h1>
